src/objects/Receipt_Details__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_Amount_in_Rs__c</fullName>
        <label>Balance Amount in(Rs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charges__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charges</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_Charges__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <filterItems>
                <field>Project_Charges__c.Applied_This_Charge_To_FA__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Project_Charges__c</referenceTo>
        <relationshipLabel>Receipt Details</relationshipLabel>
        <relationshipName>Receipt_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cheque_Date_for_Integration__c</fullName>
        <formula>Receipts__r.Cheque_DD_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cheque Date for Integration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cheque_number_for_integration__c</fullName>
        <formula>Receipts__r.Cheque_DD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cheque number for integration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demand_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Demand Invoice</label>
        <referenceTo>Demand_Invoice__c</referenceTo>
        <relationshipLabel>Receipt Details</relationshipLabel>
        <relationshipName>Receipt_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>For_Service_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is the receipt for the service tax part of the charge</description>
        <label>For Service Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_flatcost_waived__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest flatcost waived</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_servicetax_waived__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest servicetax waived</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Advanced_Demand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Advanced Demand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Cheque_Dishonour__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cheque Dishonour</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Interest_Settlement_ST__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Interest Settlement ST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Interest_Settlement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Interest Settlement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Account_Money__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Account Money</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Receipt Details</relationshipLabel>
        <relationshipName>Receipt_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receipts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipts</label>
        <referenceTo>Receipt__c</referenceTo>
        <relationshipLabel>Receipt Details</relationshipLabel>
        <relationshipName>Receipt_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Customer_Pay_Plan_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard Customer Pay Plan Detail</label>
        <referenceTo>Standard_Customer_Pay_Plan_Detail__c</referenceTo>
        <relationshipLabel>Receipt Details</relationshipLabel>
        <relationshipName>Receipt_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Receipt Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RD-{00000}</displayFormat>
        <label>Receipt Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipt Details</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>